# file_to_md_platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/app/: db.py  main.py  models.py  statuses.py  worker.py
backend/app/api/: __init__.py  status.py  tasks.py  uploads.py
backend/app/converters/: __init__.py  base.py  docx.py  pdf.py  xlsx.py
backend/app/repositories/: __init__.py  audit.py  tasks.py
backend/app/services/: audit.py  retention.py  storage.py
backend/migrations/: 001_init.sql  __init__.py
backend/tests/: test_access_control.py  test_audit_logging.py  test_converters.py  test_e2e_conversion.py  test_models.py  test_retention.py  test_smoke.py  test_storage_security.py  test_upload_api.py
docs/plans/: 2026-03-25-file-to-md-platform.md  2026-03-26-project-implementation-retrospective.md
docs/superpowers/specs/: 2026-03-25-file-to-md-design.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: MarkdownPreview.tsx  TaskStatus.tsx  UploadForm.tsx
frontend/tests/: upload-flow.spec.ts
