[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-to-md-platform"
version = "0.1.0"
description = "Browser-based file to Markdown conversion platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.migrations" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
